tests/parser/should_fail/T13450.hs
module T13450 where

example = foo
  where foo = ''
